--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
-    "express": "^4.19.2",
+    "express": "4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "3.1.4"
+  },
+  "eslintConfig": {
+    "extends":"standard"
   }
 }
