--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +25,6 @@
     "nodemon": "3.1.4"
   },
   "eslintConfig": {
-    "extends":"standard"
+    "extends": "standard"
   }
 }
